# chip8

./: CMakeLists.txt  README.md  main.cpp
include/: chip8.h
lib/: chip8.cpp
